tests/ui/proc-macro/macros-shadowing-tools-gate.stderr
error[E0658]: inner macro attributes are unstable
  --> $DIR/macros-shadowing-tools-gate.rs:3:4
   |
LL | #![rustfmt::skip]
   |    ^^^^^^^^^^^^^
   |
   = note: see issue #54726 <https://github.com/rust-lang/rust/issues/54726> for more information
   = help: add `#![feature(custom_inner_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
