tests/ui/proc-macro/macros-shadowing-tools-gate.rs
//@ proc-macro: rustfmt.rs
#![feature(prelude_import)]
#![rustfmt::skip]
//~^ ERROR: inner macro attributes are unstable

fn main() {}
